# PathogenEngine

./: .gitignore  Cargo.toml  HACKING.md  LICENSE  README.md  driver.sh  game_just_started.sgf
examples/action_client/: main.rs  web_server.rs
examples/coord_clients/: .gitignore  0001-.-temp-for-verification.patch  README.md  base.py  constant.py  gen_dataset.sh  main.py  parser.py  query_agent.py  random.py  random_agent.py  reinforcement_agent.py  reinforcement_network.py  reinforcement_player.py  reinforcement_simulator.py  reinforcement_train.py  reinforcement_trainer.py  utils.py
examples/coord_server/: .gitignore  README.md  client.py  main.rs
examples/record_viewer/: main.rs
examples/setup_evaluator/: .gitignore  README.md  main.rs
examples/setup_generator/: .gitignore  README.md  dataset_driver.sh  dataset_translate.py  main.rs
examples/setup_predictor/: .gitignore  main.py
examples/sgf_processor/: game_just_started.sgf  main.rs  tree.rs
examples/term_server/: main.rs
examples/tsume_generator/: .gitignore  README.md  main.rs
misc/: dataset_shuffler.py
share/: .gitignore
share/20240812_gen0/: summary.md
share/20240812_gen1/: summary.md
share/20240813_gen2/: summary.md
share/20240814_gen3/: summary.md
share/20240818_gen4/: summary.md
share/20240819_gen5/: summary.md
share/20240822_gen6/: summary.md
share/20240824_gen7/: summary.md
share/20240826_gen8/: summary.md
share/20240829_gen9/: summary.md
share/20240830_gen10/: summary.md
share/20240901_gen11/: summary.md
src/: board.rs  core.rs  main.rs  termion.rs  tree.rs
(+47 files in other folders)
