[package]
name = "pathogen_engine"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
rand = "0.8.5"
rayon = "1.9.0"
termion = "2.0.1"
ndarray = "0.15.6"
actix-web = "4.0"
actix-files = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
bytemuck = "1.13.1"
